RESOLVED FIXED230595
Opus and Vorbis codecs aren't available on iPad.
https://bugs.webkit.org/show_bug.cgi?id=230595
Summary Opus and Vorbis codecs aren't available on iPad.
Jean-Yves Avenard [:jya]
Reported 2021-09-21 21:21:03 PDT
Opus and Vorbis are only available on Mac for some reasons: ` #if !defined(ENABLE_VORBIS) && PLATFORM(MAC) && __MAC_OS_X_VERSION_MAX_ALLOWED >= 110300 #define ENABLE_VORBIS 1 #endif ` We should allow them everywhere and let run-time detection performs its work
Attachments
Patch (1.42 KB, patch)
2021-09-21 22:27 PDT, Jean-Yves Avenard [:jya]
ews-feeder: commit-queue-
Patch (3.46 KB, patch)
2021-09-21 23:16 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (10.21 KB, patch)
2021-09-22 01:09 PDT, Jean-Yves Avenard [:jya]
no flags
Radar WebKit Bug Importer
Comment 1 2021-09-21 21:21:54 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-09-21 22:27:33 PDT
Jean-Yves Avenard [:jya]
Comment 3 2021-09-21 23:16:23 PDT
Created attachment 438924 [details] Patch Restrict to iOS and Mac as some required headers aren't included on other platforms
Jean-Yves Avenard [:jya]
Comment 4 2021-09-22 01:09:10 PDT
Eric Carlson
Comment 5 2021-09-22 08:35:39 PDT
Comment on attachment 438933 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438933&action=review > Source/WebCore/ChangeLog:12 > + Covered by existing tests. Do the existing tests run on iOS? If so won't the expectations be wrong?
Jean-Yves Avenard [:jya]
Comment 6 2021-09-23 02:02:10 PDT
(In reply to Eric Carlson from comment #5) > Comment on attachment 438933 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=438933&action=review > > > Source/WebCore/ChangeLog:12 > > + Covered by existing tests. > > Do the existing tests run on iOS? If so won't the expectations be wrong? They do not, I opened bug 230670 to enable them
EWS
Comment 7 2021-09-23 02:54:29 PDT
Committed r282954 (242044@main): <https://commits.webkit.org/242044@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438933 [details].
Note You need to log in before you can comment on or make changes to this bug.