Opus and Vorbis codecs aren't available on iPad. https://bugs.webkit.org/show_bug.cgi?id=230595 rdar://problem/83382734

Vorbis and Opus are usable on platforms other than macOS and are being checked
Source/WebCore:

at runtime.

Reviewed by Eric Carlson.

Covered by existing tests.

* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::vorbisDecoderEnabled):
(WebCore::PlatformMediaSessionManager::setVorbisDecoderEnabled):
(WebCore::PlatformMediaSessionManager::opusDecoderEnabled):
(WebCore::PlatformMediaSessionManager::setOpusDecoderEnabled):
* platform/audio/PlatformMediaSessionManager.h:
* platform/graphics/cocoa/WebMAudioUtilitiesCocoa.mm:
(WebCore::registerDecoderFactory):
(WebCore::isOpusDecoderAvailable):
(WebCore::registerOpusDecoderIfNeeded):
(WebCore::isVorbisDecoderAvailable):
(WebCore::registerVorbisDecoderIfNeeded):

Source/WebKit:

at runtime.

Reviewed by Eric Carlson.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):

Source/WTF:

at runtime already.
Reviewed by Eric Carlson.

* wtf/PlatformEnableCocoa.h:


Canonical link: https://commits.webkit.org/242044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282954 268f45cc-cd09-0410-ab3c-d52691b4dbfc